Layout issue in point mode

--- a/projects/srm/src/app/page/page.component.less
+++ b/projects/srm/src/app/page/page.component.less
@@ -62,6 +62,7 @@
                 flex-flow: column;
                 align-items: center;
                 pointer-events: none;
+                justify-content: flex-end;
         
                 app-searchbox-header {
                     width: 100%;
